src/objects/wbsendit__Smart_Email_Variable__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Compound_Key__c</fullName>
        <formula>wbsendit__Smart_Email__r.wbsendit__Smart_Email__r.wbsendit__Smart_Email_Id__c + wbsendit__Name__c</formula>
        <label>Compound Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Format__c</fullName>
        <label>Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Is_Child_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Object_Names__c</fullName>
        <label>Object Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email__c</fullName>
        <label>Smart Email</label>
        <referenceTo>wbsendit__Smart_Email__c</referenceTo>
        <relationshipLabel>Smart Email Variables</relationshipLabel>
        <relationshipName>Smart_Email_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Smart Email Variable</label>
    <nameField>
        <displayFormat>SEV-{0}</displayFormat>
        <label>Smart Email Variable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Email Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>